# video_comparator

./: .gitignore  Architecture.md  CONTRIBUTING.md  README.md  Specification.md  TODO.md  UI_LAYOUT_DIAGRAM.md  User Story.md  pyproject.toml  validate.sh
.github/workflows/: ci.yml
src/video_comparator/: __main__.py
src/video_comparator/app/: application.py  main_frame.py
src/video_comparator/cache/: frame_cache.py  frame_result.py  prefill_strategy.py
src/video_comparator/common/: shell.py  types.py
src/video_comparator/config/: settings.py  settings_manager.py
src/video_comparator/decode/: decoder.py  video_decoder.py
src/video_comparator/errors/: error_dialog.py  error_handler.py  handler.py
src/video_comparator/input/: shortcut_manager.py  shortcuts.py
src/video_comparator/media/: loader.py  media_loader.py  metadata.py  metadata_extractor.py  video_metadata.py
src/video_comparator/playback/: controller.py  playback_controller.py
src/video_comparator/render/: scaling.py  scaling_calculator.py  video_pane.py
src/video_comparator/sync/: timeline.py  timeline_controller.py
src/video_comparator/ui/: controls.py  layout.py  layout_manager.py
tests/: README.md  test_application.py  test_decode_frame_index_consistency.py  test_error_dialog.py  test_error_handler.py  test_frame_cache.py  test_frame_result.py  test_layout_manager.py  test_main.py  test_main_frame.py  test_media_loader.py  test_null.py  test_playback_controller.py  test_prefill_strategy.py  test_scaling_calculator.py  test_settings.py  test_settings_manager.py  test_shortcut_manager.py  test_timeline_controller.py  test_ui_controls.py  test_video_decoder.py  test_video_metadata.py  test_video_pane.py
tests/sample_data/: README.md
